style: run prettier

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -11,16 +11,27 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>react-context-hook</title>
-    <meta name="description" content="A React.js global state manager with Hooks and Context API" />
+    <meta
+      name="description"
+      content="A React.js global state manager with Hooks and Context API"
+    />
 
-    <meta property="og:url" content="https://spyna.github.io/react-context-hook/" />
+    <meta
+      property="og:url"
+      content="https://spyna.github.io/react-context-hook/"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="React Context hook" />
-    <meta property="og:description" content="A React.js global state manager with Hooks and Context API" />
-    <meta property="og:image" content="https://spyna.github.io/react-context-hook/react-context-hook.png" />
+    <meta
+      property="og:description"
+      content="A React.js global state manager with Hooks and Context API"
+    />
+    <meta
+      property="og:image"
+      content="https://spyna.github.io/react-context-hook/react-context-hook.png"
+    />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="640" />
-
   </head>
 
   <body>
