style: color fixes on demo

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -6,14 +6,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#09d3ac" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>react-context-hook</title>
     <meta
       name="description"
-      content="A React.js global state manager with Hooks and Context API"
+      content="React global state manager with Hooks. A tiny library to manage the global state with React hooks."
     />
 
     <meta
